Quarkus multi-tenancy JPA auth issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
+# Comment out this security config block and multi-tenancy works fine
 quarkus.http.auth.form.enabled = true
-
 quarkus.http.auth.permission.authenticated1.paths=/api/*
 quarkus.http.auth.permission.authenticated1.policy=authenticated
 quarkus.http.auth.permission.authenticated1.auth-mechanism=form
 
+# Not sure why I need a default datasource
 quarkus.datasource.db-kind = mysql
 quarkus.datasource.username = quarkus
 quarkus.datasource.password = quarkus
 quarkus.datasource.jdbc.url = jdbc:mysql://127.0.0.1:3306/multi
+# Configure tenant named "tenant1"
+quarkus.datasource.tenant1.db-kind = mysql
+quarkus.datasource.tenant1.username = quarkus
+quarkus.datasource.tenant1.password = quarkus
+quarkus.datasource.tenant1.jdbc.url = jdbc:mysql://127.0.0.1:3306/multi
+
+# Enable multi-tenancy
+quarkus.hibernate-orm.multitenant=DATABASE
